--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,7 +13,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li>
           <button class="btn btn-form btn-small">
-            <%= link_to "Become a host", '/', style: "color: white; text-decoration: none;" %>
+            <%= link_to "Become a host", new_room_path, style: "color: white; text-decoration: none;" %>
           </button>
         </li>
 
@@ -28,8 +28,8 @@
                     <%= current_user.fullname %> <span class="caret"></span>
               </a>
               <ul class="dropdown-menu">
-                <li><%= link_to "Manage Listing", '/' %></li>
-                <li><%= link_to "List Your Space", '/' %></li>
+                <li><%= link_to "Manage Listing", rooms_path %></li>
+                <li><%= link_to "List Your Space", new_room_path %></li>
                 <li><%= link_to "Your Reservations", '/' %></li>
                 <li><%= link_to "Your Trips", '/' %></li>
                 <li role="separator" class="divider"></li>
