Reservations Controller and Date Picker

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -30,8 +30,8 @@
               <ul class="dropdown-menu">
                 <li><%= link_to "Manage Listing", rooms_path %></li>
                 <li><%= link_to "List Your Space", new_room_path %></li>
-                <li><%= link_to "Your Reservations", '/' %></li>
-                <li><%= link_to "Your Trips", '/' %></li>
+                <li><%= link_to "Your Reservations", your_reservations_path %></li>
+                <li><%= link_to "Your Trips", your_trips_path %></li>
                 <li role="separator" class="divider"></li>
                 <li><%= link_to "Edit Profile", edit_user_registration_path %></li>
                 <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
