--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -124,6 +124,20 @@
     </div>
     <hr/>
 
+    <!-- REVIEWS -->
+    <div class="row">
+      <div class="col-md-12">
+        <h3>
+          <%= pluralize(@guest_reviews.count, "Review") %>
+          <span id="average_rating"></span>
+        </h3>
+        <div class="container">
+          <div><%= render "reviews/guest_list" %></div>
+        </div>
+      </div>
+    </div>
+    <br/>
+    <hr/>
 
     <!-- GOOGLE MAP -->
     <div class="row">
@@ -176,3 +190,11 @@
     </div>
 
   </div>
+
+
+  <!-- RIGHT PANEL -->
+  <div class="col-md-4">
+    <!-- Reservation Form -->
+    <%= render 'reservations/form' %>
+  </div>
+</div>
